--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 			<div class ="navigation-bar">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">ALI</a>
+		  <a class="navbar-brand" href="#">Ali Sayyad</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
