--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		  <a class="navbar-brand" href="#">Ali Sayyad</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
-		  </button>
+		  </button> 
 
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav ml-auto">
@@ -36,11 +36,24 @@
 		       <li class="nav-item">
 		        <a class="nav-link" href="#">Contact</a>
 		      </li>
-		      
-		  
 		  </div>
 		</nav>
 		
 	</div>
+	<section id="Home" class="Portfholio-sections">
+		<h1>Home</h1>
+	</section>
+	<section id="About" class="Portfholio-sections">
+		<h1>About</h1>
+	</section>
+	<section id="Skills" class="Portfholio-sections">
+		<h1>Skills</h1>
+	</section>
+	<section id="Project" class="Portfholio-sections">
+		<h1>Project</h1>
+	</section>
+	<section id="Contacts" class="Portfholio-sections">
+		<h1>Contacts</h1>
+	</section>
 <head></head>
 </body>
